   [openbsd-compat/port-linux.c openbsd-compat/port-solaris.c]
   [openbsd-compat/port-uw.c]
   Lots of headers for SCO OSR6, mainly adding stdarg.h for log.h;
   compile problems reported by rac AT tenzing.org
 - (djm) [includes.h monitor.c openbsd-compat/bindresvport.c]
   [openbsd-compat/rresvport.c] Some more headers: netinet/in.h 
   sys/socket.h and unistd.h in various places

20060831
 - (djm) [CREDITS LICENCE Makefile.in auth.c configure.ac includes.h ]
   [platform.c platform.h sshd.c openbsd-compat/Makefile.in]
   [openbsd-compat/openbsd-compat.h openbsd-compat/port-solaris.c]
   [openbsd-compat/port-solaris.h] Add support for Solaris process
   contracts, enabled with --use-solaris-contracts. Patch from Chad
   Mynhier, tweaked by dtucker@ and myself; ok dtucker@
 - (dtucker) [contrib/cygwin/ssh-host-config] Add SeTcbPrivilege privilege
   while setting up the ssh service account.  Patch from Corinna Vinschen.

20060830
 - (djm) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2006/08/21 08:14:01
     [sshd_config.5]
     Document HostbasedUsesNameFromPacketOnly.  Corrections from jmc@,
     ok jmc@ djm@
   - dtucker@cvs.openbsd.org 2006/08/21 08:15:57
     [sshd.8]
     Add more detail about what permissions are and aren't accepted for
     authorized_keys files.  Corrections jmc@, ok djm@, "looks good" jmc@
   - djm@cvs.openbsd.org 2006/08/29 10:40:19
     [channels.c session.c]
     normalise some inconsistent (but harmless) NULL pointer checks
     spotted by the Stanford SATURN tool, via Isil Dillig;
     ok markus@ deraadt@
   - dtucker@cvs.openbsd.org 2006/08/29 12:02:30
     [gss-genr.c]
     Work around a problem in Heimdal that occurs when KRB5CCNAME file is
     missing, by checking whether or not kerberos allocated us a context
     before attempting to free it.  Patch from Simon Wilkinson, tested by
     biorn@, ok djm@
   - dtucker@cvs.openbsd.org 2006/08/30 00:06:51
     [sshconnect2.c]