@@ -17,6 +17,8 @@
  - (djm) [includes.h monitor.c openbsd-compat/bindresvport.c]
    [openbsd-compat/rresvport.c] Some more headers: netinet/in.h 
    sys/socket.h and unistd.h in various places
+ - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Fix implict declaration
+   warnings for binary_open and binary_close.  Patch from Corinna Vinschen.
 
 20060831
  - (djm) [CREDITS LICENCE Makefile.in auth.c configure.ac includes.h ]
@@ -5368,4 +5370,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4522 2006/09/01 05:48:19 djm Exp $
+$Id: ChangeLog,v 1.4523 2006/09/01 09:29:01 dtucker Exp $
